--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
 orbs:
   slack: circleci/slack@3.4.2 # FIXME update to v4
-  node: circleci/node@4.2.0
-  shellcheck: circleci/shellcheck@2.2.2
-  docker: circleci/docker@1.5.0
+  node: circleci/node@4.5.1
+  shellcheck: circleci/shellcheck@2.2.4
+  docker: circleci/docker@1.6.0
 version: 2.1
 jobs:
   test:
     machine:
-      image: ubuntu-2004:202101-01
+      image: ubuntu-2004:202104-01
     steps:
       - checkout
       - run: docker run --name redis-gsuite-wrapper -d redis
@@ -16,15 +16,15 @@ jobs:
           command: |
             echo 'export NVM_DIR="/opt/circleci/.nvm"' >> $BASH_ENV
             echo ' [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> $BASH_ENV
-            nvm install v14.16.0
-            nvm alias default v14.16.0
+            nvm install v14.17.3
+            nvm alias default v14.17.3
       - node/install-packages
       - run: echo $SERVICEACCOUNT_JSON > lib/config/myaegee-serviceaccount.json
       - run: echo $SECRETS_JSON > lib/config/secrets.json
       - run: mkdir -p ~/reports/mocha
       - run:
           name: Run tests
-          command: npm test
+          command: npm run test
       # - run: ./node_modules/.bin/codecov
       # - store_test_results:
       #     path: ~/reports
@@ -32,15 +32,15 @@ jobs:
       #     path: ~/reports
   build:
     docker:
-      - image: cimg/base:2021.03
+      - image: cimg/base:2021.07
     steps:
       - checkout
       - setup_remote_docker:
-          version: 20.10.2
+          version: 20.10.7
       - run: docker-compose -f docker/docker-compose.yml -f docker/docker-compose.dev.yml build --no-cache gsuite-wrapper
   eslint:
     docker:
-      - image: cimg/node:14.16.0
+      - image: cimg/node:14.17.3
     steps:
       - checkout
       - node/install-packages
@@ -52,21 +52,21 @@ jobs:
           path: ~/reports
   yamllint:
     docker:
-      - image: cimg/python:3.9.2
+      - image: cimg/python:3.9.6
     steps:
       - checkout
       - run: pip install yamllint
       - run: yamllint -d .yamllint.yml .
   shellcheck:
     docker:
-      - image: cimg/base:2021.03
+      - image: cimg/base:2021.07
     steps:
       - checkout
       - shellcheck/install
       - shellcheck/check
   audit:
     docker:
-      - image: cimg/node:14.16.0
+      - image: cimg/node:14.17.3
     steps:
       - checkout
       - run: npm audit --production
@@ -75,11 +75,11 @@ jobs:
           failure_message: The audit check for \`$CIRCLE_PROJECT_REPONAME\` has failed.
   docker-build-and-push:
     docker:
-      - image: cimg/node:14.16.0
+      - image: cimg/node:14.17.3
     steps:
       - checkout
       - setup_remote_docker:
-          version: 20.10.2
+          version: 20.10.7
       - node/install-packages
       - run: npx semantic-release
       - run: docker build  --tag aegee/gsuite-wrapper:$(node -p "require('./package.json').version") --tag aegee/gsuite-wrapper:latest -f docker/Dockerfile .
@@ -105,9 +105,9 @@ workflows:
           filters:
             branches:
               ignore: master
-  # test:
-  #   jobs:
-  #     - test
+  test:
+    jobs:
+      - test
   docker-build-and-push:
     jobs:
       - docker-build-and-push:
