--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.4"
 
 ### GSUITE WRAPPER   #######################################
 services:
-  redis-gsuite-wrapper:
+  redis:
     restart: always
-    image: redis:5-alpine
+    image: redis:6.2.5-alpine
     volumes:
       - redis_gsuite_persistence:/data
 
@@ -12,7 +12,7 @@ services:
     restart: on-failure
     image: aegee/gsuite-wrapper:latest
     links:
-      - redis-gsuite-wrapper
+      - redis
     expose:
       - 8084
     volumes:
