--- a/package.json
+++ b/package.json
@@ -10,34 +10,33 @@
     "start": "node lib/run.js",
     "test": "export NODE_ENV=test; nyc --cache --reporter=none mocha",
     "posttest": "nyc report --reporter=html --reporter=text; echo 'time to get scared.. run <npm run lint>'",
-    "lint": "eslint .",
-    "update-dep": "david update"
+    "lint": "eslint ."
   },
   "dependencies": {
     "config": "^3.3.6",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
-    "googleapis": "^59.0.0",
-    "ioredis": "^4.24.6",
+    "googleapis": "^88.2.0",
+    "ioredis": "^4.27.10",
     "morgan": "^1.10.0",
-    "winston": "^3.3.0",
-    "swagger-jsdoc": "^4.3.1"
+    "winston": "^3.3.3",
+    "swagger-jsdoc": "^6.1.0"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/changelog": "^6.0.0",
+    "@semantic-release/git": "^10.0.0",
     "chai": "^4.3.4",
     "conventional-changelog": "^3.1.24",
-    "eslint": "^7.23.0",
+    "eslint": "^7.32.0",
     "eslint-config-strongloop": "^2.1.0",
-    "eslint-plugin-mocha": "^8.1.0",
+    "eslint-plugin-mocha": "^9.0.0",
     "istanbul": "^0.4.5",
-    "mocha": "^5.2.0",
+    "mocha": "^9.1.2",
     "mocha-istanbul": "^0.3.0",
     "moment": "^2.29.1",
-    "nyc": "^13.1.0",
+    "nyc": "^15.1.0",
     "request": "^2.88.2",
-    "request-promise-native": "^1.0.8",
-    "semantic-release": "^17.4.2"
+    "request-promise-native": "^1.0.9",
+    "semantic-release": "^18.0.0"
   }
 }
