--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,31 @@
 {
-    "extends": "strongloop",
-
+    "root": true,
     "env": {
         "es6": true,
         "node": true,
         "mocha": true
     },
-
-    "parserOptions": {
-        "ecmaVersion": 2017
-    },
-
+    "extends": "airbnb-base",
     "plugins": [
         "mocha"
     ],
-
     "rules": {
-      "max-len": "off",
-      "mocha/no-exclusive-tests": "error"
+        "no-underscore-dangle": "off",
+        "no-param-reassign": ["error", { "props": false }],
+        "no-restricted-syntax": "off",
+        "no-plusplus": "off",
+        "comma-dangle": "off",
+        "max-len": "off",
+        "prefer-template": "off",
+        "guard-for-in": "off",
+        "indent": ["error", 4],
+        "prefer-destructuring": "off",
+        "arrow-body-style": "off",
+        "object-curly-newline": "off",
+        "no-await-in-loop": "off",
+        "no-continue": "off",
+        "consistent-return": "off",
+        "implicit-arrow-linebreak": "off"
     }
-}
+  }
+  
