--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
     "googleapis": "^88.2.0",
     "ioredis": "^4.28.0",
     "morgan": "^1.10.0",
-    "winston": "^3.3.3",
-    "swagger-jsdoc": "^6.1.0"
+    "swagger-jsdoc": "^6.1.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.0",
@@ -28,7 +29,8 @@
     "chai": "^4.3.4",
     "conventional-changelog": "^3.1.24",
     "eslint": "^8.0.0",
-    "eslint-config-strongloop": "^2.1.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-mocha": "^9.0.0",
     "mocha": "^9.1.2",
     "mocha-istanbul": "^0.3.0",
