--- a/package.json
+++ b/package.json
@@ -10,34 +10,38 @@
     "start": "node lib/run.js",
     "test": "export NODE_ENV=test; nyc --cache --reporter=none mocha",
     "posttest": "nyc report --reporter=html --reporter=text; echo 'time to get scared.. run <npm run lint>'",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.19.1",
     "config": "^3.3.6",
-    "express": "^4.17.1",
-    "express-promise-router": "^4.1.0",
-    "googleapis": "^88.2.0",
-    "ioredis": "^4.28.0",
+    "express": "^4.17.2",
+    "express-promise-router": "^4.1.1",
+    "googleapis": "^92.0.0",
+    "ioredis": "^4.28.2",
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.1.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^16.0.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "chai": "^4.3.4",
+    "commitlint": "^16.0.1",
     "conventional-changelog": "^3.1.25",
-    "eslint": "^8.0.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-mocha": "^9.0.0",
-    "mocha": "^9.1.2",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-mocha": "^10.0.3",
+    "husky": "^7.0.4",
+    "mocha": "^9.1.3",
     "mocha-istanbul": "^0.3.0",
     "moment": "^2.29.1",
     "nyc": "^15.1.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
-    "semantic-release": "^18.0.0"
+    "semantic-release": "^18.0.1"
   }
 }
