--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,48 +1,43 @@
 orbs:
-  slack: circleci/slack@3.4.1
+  codecov: codecov/codecov@3.2.0
+  docker: circleci/docker@1.6.0
+  node: circleci/node@4.7.0
+  shellcheck: circleci/shellcheck@2.2.4
+  slack: circleci/slack@4.4.4
 version: 2.1
 jobs:
   test:
-    machine:
-      image: ubuntu-2004:202107-02
+    docker:
+      - image: cimg/node:16.13.0
+      - image: circleci/redis:6.2.5-alpine
     steps:
       - checkout
-      - run:
-          name: Install Node
-          command: |
-            curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
-            sudo apt-get install -y nodejs
-            echo 'export PATH=/usr/bin:$PATH' >> $BASH_ENV
-            which node && node -v
-      - run: npm install
-      - run: mkdir -p ~/reports/jest
+      - node/install-packages
+      - run: echo $SERVICEACCOUNT_JSON > lib/config/myaegee-serviceaccount.json
+      - run: echo $SECRETS_JSON > lib/config/secrets.json
+      - run: mkdir -p ~/reports/mocha
       - run:
           name: Run tests
-          command: npm test
-      # - run: ./node_modules/.bin/codecov
+          command: npm run test
+      # - codecov/upload
       # - store_test_results:
       #     path: ~/reports
       # - store_artifacts:
       #     path: ~/reports
   build:
-    machine:
-      image: ubuntu-2004:202107-02
+    docker:
+      - image: cimg/base:2021.10
     steps:
       - checkout
+      - setup_remote_docker:
+          version: 20.10.7
       - run: docker-compose -f docker/docker-compose.yml -f docker/docker-compose.dev.yml build --no-cache gsuite-wrapper
   eslint:
-    machine:
-      image: ubuntu-2004:202107-02
+    docker:
+      - image: cimg/node:16.13.0
     steps:
       - checkout
-      - run:
-          name: Install Node
-          command: |
-            curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
-            sudo apt-get install -y nodejs
-            echo 'export PATH=/usr/bin:$PATH' >> $BASH_ENV
-            which node && node -v
-      - run: npm install
+      - node/install-packages
       - run: mkdir -p ~/reports
       - run: npm run lint -- --format junit --output-file ~/reports/eslint.xml
       - store_test_results:
@@ -50,54 +45,190 @@ jobs:
       - store_artifacts:
           path: ~/reports
   yamllint:
-    machine:
-      image: ubuntu-2004:202107-02
+    docker:
+      - image: cimg/python:3.10.0
     steps:
       - checkout
       - run: pip install yamllint
       - run: yamllint -d .yamllint.yml .
-  docker-build-and-push:
-    machine:
-      image: ubuntu-2004:202107-02
+  shellcheck:
+    docker:
+      - image: cimg/base:2021.10
     steps:
       - checkout
-      - run:
-          name: Install Node
-          command: |
-            curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
-            sudo apt-get install -y nodejs
-            echo 'export PATH=/usr/bin:$PATH' >> $BASH_ENV
-            which node && node -v
-      - run: npm install
+      - shellcheck/install
+      - shellcheck/check
+  audit:
+    docker:
+      - image: cimg/node:16.13.0
+    steps:
+      - checkout
+      - run: npm audit --production
+      - slack/notify:
+          event: fail
+          custom: |
+              {
+                "blocks": [
+                  {
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": ":x: The audit check for `$CIRCLE_PROJECT_REPONAME` has failed."
+                    }
+                  },
+                  {
+                    "type": "section",
+                    "fields": [
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Project*\n$CIRCLE_PROJECT_REPONAME"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Job Number*\n$CIRCLE_BUILD_NUM"
+                      }
+                    ]
+                  },
+                  {
+                    "type": "actions",
+                    "elements": [
+                      {
+                        "type": "button",
+                        "text": {
+                          "type": "plain_text",
+                          "text": "Visit Job"
+                        },
+                        "url": "${CIRCLE_BUILD_URL}"
+                      }
+                    ]
+                  }
+                ]
+              }
+  docker-build-and-push:
+    docker:
+      - image: cimg/node:16.13.0
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 20.10.7
+      - node/install-packages
       - run: npx semantic-release
-      - run: docker build  --tag aegee/gsuite-wrapper:$(node -p "require('./package.json').version") --tag aegee/gsuite-wrapper:latest -f docker/Dockerfile .
+      - run: echo export PACKAGE_VERSION=$(node -p "require('./package.json').version") >> $BASH_ENV
+      - run: docker build --tag aegee/gsuite-wrapper:$PACKAGE_VERSION --tag aegee/gsuite-wrapper:latest -f docker/Dockerfile .
       - run: docker login --username $DOCKER_LOGIN --password $DOCKER_PASSWORD
-      - run: docker push aegee/gsuite-wrapper:$(node -p "require('./package.json').version")
+      - run: docker push aegee/gsuite-wrapper:$PACKAGE_VERSION
       - run: docker push aegee/gsuite-wrapper:latest
-      - slack/status:
-          success_message: The Docker image for \`$CIRCLE_PROJECT_REPONAME\` with tags \`$(node -p "require('./package.json').version")\` and \`latest\` has been pushed to Dockerhub.
-          failure_message: The Docker image for \`$CIRCLE_PROJECT_REPONAME\` build and push has failed.
+      - slack/notify:
+          event: pass
+          custom: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": ":white_check_mark: The Docker image for `$CIRCLE_PROJECT_REPONAME` with tags `$PACKAGE_VERSION` and `latest` has been pushed to Dockerhub."
+                  }
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Project*\n$CIRCLE_PROJECT_REPONAME"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Job Number*\n$CIRCLE_BUILD_NUM"
+                    }
+                  ]
+                },
+                {
+                  "type": "actions",
+                  "elements": [
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "Visit Job"
+                      },
+                      "url": "${CIRCLE_BUILD_URL}"
+                    }
+                  ]
+                }
+              ]
+            }
+      - slack/notify:
+          event: fail
+          custom: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": ":octagonal_sign: The Docker image for `$CIRCLE_PROJECT_REPONAME` build and push has failed."
+                  }
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Project*\n$CIRCLE_PROJECT_REPONAME"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Job Number*\n$CIRCLE_BUILD_NUM"
+                    }
+                  ]
+                },
+                {
+                  "type": "actions",
+                  "elements": [
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "Visit Job"
+                      },
+                      "url": "${CIRCLE_BUILD_URL}"
+                    }
+                  ]
+                }
+              ]
+            }
 
 workflows:
   version: 2
-  test:
-    jobs:
-      - test
-  eslint:
+  linters:
     jobs:
       - eslint
+      - yamllint
+      - shellcheck
+      - docker/hadolint:
+          dockerfiles: $(find . -name '*Dockerfile*')
   build:
     jobs:
       - build:
           filters:
             branches:
               ignore: master
-  yamllint:
+  test:
     jobs:
-      - yamllint
+      - test
   docker-build-and-push:
     jobs:
       - docker-build-and-push:
           filters:
             branches:
               only: master
+  audit:
+    triggers:
+      - schedule:
+          cron: "0 0 * * 5"
+          filters:
+            branches:
+              only: master
+    jobs:
+      - audit
