--- a/package.json
+++ b/package.json
@@ -11,33 +11,37 @@
     "test": "export NODE_ENV=test; nyc --cache --reporter=none mocha",
     "posttest": "nyc report --reporter=html --reporter=text; echo 'time to get scared.. run <npm run lint>'",
     "lint": "eslint .",
-    "update-dep": "david update"
+    "prepare": "husky install"
   },
   "dependencies": {
+    "body-parser": "^1.19.1",
     "config": "^3.3.6",
-    "express": "^4.17.1",
-    "express-promise-router": "^4.1.0",
-    "googleapis": "^59.0.0",
-    "ioredis": "^4.27.10",
+    "express": "^4.17.2",
+    "express-promise-router": "^4.1.1",
+    "googleapis": "^92.0.0",
+    "ioredis": "^4.28.2",
     "morgan": "^1.10.0",
-    "winston": "^3.3.0",
-    "swagger-jsdoc": "^4.3.1"
+    "swagger-jsdoc": "^6.1.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^16.0.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "chai": "^4.3.4",
+    "commitlint": "^16.0.1",
     "conventional-changelog": "^3.1.25",
-    "eslint": "^7.32.0",
-    "eslint-config-strongloop": "^2.1.0",
-    "eslint-plugin-mocha": "^9.0.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^5.2.0",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-mocha": "^10.0.3",
+    "husky": "^7.0.4",
+    "mocha": "^9.1.3",
     "mocha-istanbul": "^0.3.0",
     "moment": "^2.29.1",
-    "nyc": "^13.1.0",
+    "nyc": "^15.1.0",
     "request": "^2.88.2",
-    "request-promise-native": "^1.0.8",
-    "semantic-release": "^18.0.0"
+    "request-promise-native": "^1.0.9",
+    "semantic-release": "^18.0.1"
   }
 }
