--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,16 @@
 orbs:
-  codecov: codecov/codecov@3.2.0
-  docker: circleci/docker@1.6.0
-  node: circleci/node@4.7.0
-  shellcheck: circleci/shellcheck@2.2.4
-  slack: circleci/slack@4.4.4
+  codecov: codecov/codecov@3.2.5
+  docker: circleci/docker@2.2.0
+  node: circleci/node@5.1.0
+  shellcheck: circleci/shellcheck@3.1.2
+  slack: circleci/slack@4.12.5
 version: 2.1
 jobs:
   test:
     docker:
-      - image: cimg/node:16.13.0
-      - image: circleci/redis:6.2.5-alpine
+      - image: cimg/node:18.16.0
+      - image: cimg/redis:6.2.12
+    resource_class: large
     steps:
       - checkout
       - node/install-packages
@@ -26,15 +27,17 @@ jobs:
       #     path: ~/reports
   build:
     docker:
-      - image: cimg/base:2021.10
+      - image: cimg/base:2023.05
+    resource_class: large
     steps:
       - checkout
       - setup_remote_docker:
-          version: 20.10.7
+          version: 20.10.23
       - run: docker-compose -f docker/docker-compose.yml -f docker/docker-compose.dev.yml build --no-cache gsuite-wrapper
   eslint:
     docker:
-      - image: cimg/node:16.13.0
+      - image: cimg/node:18.16.0
+    resource_class: large
     steps:
       - checkout
       - node/install-packages
@@ -46,21 +49,24 @@ jobs:
           path: ~/reports
   yamllint:
     docker:
-      - image: cimg/python:3.10.0
+      - image: cimg/python:3.11.3
+    resource_class: large
     steps:
       - checkout
       - run: pip install yamllint
       - run: yamllint -d .yamllint.yml .
   shellcheck:
     docker:
-      - image: cimg/base:2021.10
+      - image: cimg/base:2023.05
+    resource_class: large
     steps:
       - checkout
       - shellcheck/install
       - shellcheck/check
   audit:
     docker:
-      - image: cimg/node:16.13.0
+      - image: cimg/node:18.16.0
+    resource_class: large
     steps:
       - checkout
       - run: npm audit --production
@@ -106,11 +112,12 @@ jobs:
               }
   docker-build-and-push:
     docker:
-      - image: cimg/node:16.13.0
+      - image: cimg/node:18.16.0
+    resource_class: large
     steps:
       - checkout
       - setup_remote_docker:
-          version: 20.10.7
+          version: 20.10.23
       - node/install-packages
       - run: npx semantic-release
       - run: echo export PACKAGE_VERSION=$(node -p "require('./package.json').version") >> $BASH_ENV
